hphp/test/zend/good/ext/dom/tests/dom_import_simplexml.php.skipif
<?hh require_once('skipif.inc');
if (!extension_loaded('simplexml')) die('skip simplexml extension not available');