hphp/test/zend/bad/ext/xsl/tests/xslt008.php.skipif
<?php
	require_once dirname(__FILE__) .'/skipif.inc';
	if (!extension_loaded('zlib')) die('skip zlib extension not available');
?>